# corelatent

./: README.md
controller/inc/controller/: rigid_6dof_pid_controller.hpp  rigid_6dof_trajectory_tracker.hpp
interface/: CMakeLists.txt  package.xml
interface/demo/: rviz2_vis_p3t.cpp
interface/inc/: polynomial_3d_trajectory.hpp
interface/inc/interface/: arc_trajectory.hpp  piecewise_trajectory.hpp  polynomial_3d_trajectory.hpp  polynomial_trajectory.hpp  trajectory.hpp
interface/msg/: Polynomial.msg
interface/src/: piecewise_trajectory.cpp  polynomial_3d_trajectory.cpp  polynomial_trajectory.cpp
interface/test/: polynomial_3d_trajectory_test.cpp  polynomial_msg_demo.cpp  polynomial_trajectory_test.cpp
simulator/: CMakeLists.txt
simulator/demo/: 2dj_simulator.cpp  javo_simulator.cpp
simulator/inc/simulator/: 2d_jerk_object.hpp  jerk_2d_controller.hpp  jerk_2d_trajectory_tracker.hpp  rigid_jerk_angular_velocity_object.hpp  rigid_object.hpp
